--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "b31a2d99-04c2-403d-8240-ad5c0a62facf"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
